--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="DATABASE"
+            android:value="movie.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="1" />
+        <!--<meta-data android:name="QUERY_LOG" android:value="true" />-->
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="id.sch.smktelkom_mlg.privateassignment.xirpl401.movs.model" />
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
