--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
         <meta-data
             android:name="DATABASE"
-            android:value="movie.db" />
+            android:value="places.db" />
         <meta-data
             android:name="VERSION"
             android:value="1" />
@@ -39,13 +39,7 @@
         <activity
             android:name=".MovieItemListActivity"
             android:label="@string/title_movieitem_list"
-            android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".MovieItemDetailActivity"
             android:label="@string/title_movieitem_detail"
